--- a/index.html
+++ b/index.html
@@ -5,19 +5,32 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <title>MkRoDGaminG</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="jscript.js"></script>
         <link rel="stylesheet" href=style.css>
     </head>
     <body class=body>
 
-       <div class=search>
-       
-       </div>
-       <div class="hd"><h3 id="txt">MkRoDGaminG</h3></div>
-       <div class=navbar>
+       <div class="navbar">
 
-       </div>
+        <div class="dropdown">
+            <i class="fa-solid fa-bars"></i>
+            <div class="content">
+                <a href="/homepage/profile/profile.html" id="dm">Profiles</a>
+                <a href="/homepage/dashboard/dashboard.html" id="dm">Dashboard</a>
+                <a href="/homepage/settings/settings.html" id="dm">Settings</a>
+            </div>
+           </div>
+
+        <h3 id="txt">MkRoDGaminG</h3>
+
+        <div>
+            <i class="fa-solid fa-magnifying-glass"></i>   
+        </div>
+
+            </div>
+
+      
 
         <div class=features>
             <p id="txf">FEATURES</p>
@@ -34,7 +47,7 @@
 
         <div class="bottom">
             <p id="earn">click below to learn about</p>
-            <div class="btn"><a href="/homepage/dashboard/"><button id="btn">learn</button></a></div>
+            <div class="btn"><a href="/homepage/dashboard/dashboard.html"><button id="btn">learn</button></a></div>
             <h4 style="color: #ffffff;">- there is no knowlege that is not power</h4>
         <div class="b"><input type="search" id="box" placeholder="search"></div>
 
