--- a/homepage/register/register.html
+++ b/homepage/register/register.html
@@ -16,19 +16,19 @@
                 <h1>Sign Up</h1>
                 <div class="input-box">
                     <input type="text" placeholder="Choose Username" required>
-                    <i class='bx bx-user'></i>
+                    <i class='bx bx-user' id="u"></i>
                 </div>
                 <div class="input-box">
                     <input type="email" placeholder="Email Address" required>
-                    <i class='bx bxl-gmail'></i>
+                    <i class='bx bxl-gmail' id="u"></i>
                 </div>
                 <div class="input-box">
                     <input type="password" placeholder="Create a Password" required>
-                    <i class='bx bx-hide' ></i>
+                    <i class='bx bx-hide' id="h"></i>
                 </div>
                 <div class="input-box">
                     <input type="password" placeholder="Confirm Password" required>
-                    <i class='bx bx-hide' ></i>
+                    <i class='bx bx-hide' id="h"></i>
                 </div>
                 <div class="remember">
                     <label><input type="checkbox">Remember me</label>
