--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <title>MkRoDGaminG</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <script src="jscript.js"></script>
         <link rel="stylesheet" href=style.css>
     </head>
@@ -17,7 +18,7 @@
         <div class="dropdown">
             <details>
             <summary>
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars" id="mu"></i>
             </summary>
 
             <div class="a">      
@@ -50,16 +51,16 @@
                   <li><a href="/homepage/download/download.html">Download</a> PC Games</li>
                   <li>Purchase <a href="/homepage/services/services.html">service</a></li>
                   <li><a href="/homepage/earn/earn.html">Earn</a></li>
-                  <li><a href="/homepage/services/services.html">Buy</a> me a coffee</li>
+                  <li><a href="/homepage/coffee/buy.html">Buy</a> me a coffee</li>
                </ul>
         </div>
 
-        <div class="vid"><video src="homevid.mp4" id="video" controls="video/mp4" alt=homevideo autoplay="yes" loop="yes"></video></video></div>
+        <div class="vid"><video src="/https://www.youtube.com/?watch=MkRoDGaminG" id="video" controls="video/mp4" alt=homevideo autoplay="yes" loop="yes"></video></video></div>
 
         <div class="bottom">
             <p id="earn">click below to learn about</p>
             <div class="btn"><a href="/homepage/dashboard/dashboard.html"><button id="btn">learn</button></a></div>
-            <h4 style="color: #ffffff;">- there is no knowlege that is not power</h4>
+            <h5 style="color: #ffffff; font-family: Poppins, sans-serif;">- there is no knowlege that is not power</h5>
 
         <div class="b">
             <form id="search-form">
