--- a/homepage/dashboard/dashboard.html
+++ b/homepage/dashboard/dashboard.html
@@ -4,30 +4,31 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-        <title>PAL</title>
+        <title>Dashboard</title>
         <link rel="stylesheet" href="style.css">
         <script src="jscript.js"></script>
         <link rel="stylesheet" href=style.css>
     </head>
     <body>
-          <h1 style="background-color: transparent; border: groove; border-radius: 10px;">Dashboard</h1>
+          <h1 style="background-color: transparent, #000; border: 2px solid rgba(225, 225, 225, .2); border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, .2);">Dashboard</h1>
         <div class="ubox">
            
-            <span id="txt"><b>welcome</b></span>
-            <span id="tx">earnings: ($?)</span>
+            <span id="txt"><h6>USER</h6></span>
+            <span id="tx">Balance<br>$_____</span>
+            <span id="txr">Rank<br>________</span>
 
 
         </div>
 
         <div class="dbox">
-            <span id="h"><a href="/homepage/index.html"><button id="home">Home</button></a></span>
-            <span id="p"><button id="profile">Profile</button></span><br>
-            <span id="w"><button id="with">Withdraw</button></span>
-            <span id="r"><button id="recharge">Recharge</button></span><br>
-            <span id="rf"><button id="refer">Referral</button></span>
-            <span id="e"><button id="earn">Earn</button></span><br>
-            <span id="c"><button id="contact">Contact</button></span>
-            <span id="hp"><button id="help">Help</button></span>
+            <a href="/index.html"><span id="h"><button id="home">Home</button></span></a>
+            <a href="/homepage/profile/profile.html"><span id="p"><button id="profile">Profile</button></span></a><br>
+            <a><span id="w"><button id="with">Withdraw</button></span></a>
+            <a><span id="r"><button id="recharge">Recharge</button></span></a><br>
+            <a><span id="rf"><button id="refer">Referral</button></span></a>
+            <a href="/homepage/earn/earn.html"><span id="e"><button id="earn">Earn</button></span></a><br>
+            <a><span id="c"><button id="contact">Contact</button></span></a>
+            <a><span id="lo"><button id="logout">Logout</button></span></a>
         </div>
 
 
