--- a/homepage/login/login.html
+++ b/homepage/login/login.html
@@ -16,23 +16,24 @@
             <form action="">
                 <h1>Login</h1>
                 <div class="input-box">
-                    <input type="text" placeholder="Username" required>
+                    <input type="text" placeholder="Username" id="username" required>
                     <i class='bx bxs-user'></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" placeholder="Password" id="password" required>
                     <i class='bx bxs-lock-alt' id="show-password"></i>
                 </div>
 
                 <div class="remember-forgot">
                     <label><input type="checkbox"> Remember me</label>
-                    <a href="#">Forgot password?</a>
+                    <a href="/homepage/reset/reset.html">Forgot password?</a>
                 </div>
                 
                 <button type="submit" class="btn">Login</button>
 
                 <div class="register-link">
-                    <p>Don't have an account? <a href="/homepage/register/register.html">Register</a></p>
+                    <p>Don't have an account? <a href="/homepage/register/register.html">Register</a></p><br><br><br>
+                    <p><a href="/index.html">Back</a></p>
                 </div>
             </form>
 
