--- a/homepage/reset/reset.html
+++ b/homepage/reset/reset.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-        <title>Thanks!!!</title>
+        <title>Reset Password</title>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <script src="jscript.js"></script>
         <link rel="stylesheet" href=style.css>
     </head>
     <body>
-        <h1 style="background-color: aliceblue; border-radius: 5px;">Coming Soon</h1>
+        <div class="wrapper">
+            <form action="">
+            <h1>Reset</h1>
+        <div class="reset-box">
+            <input type="email, text" id="reset-box" placeholder="enter email">
+        </div>
+        
+        <button type="submit" class="btn">Submit</button>
+
+        <div class="back">
+            <p><a href="/homepage/login/login.html">Back</a></p>
+        </div>
+
+        </form>
+
+        </div>
+        
+
     </body>
 </html>
